[package]
name = "opnsense_gw_mon_setter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4", features = ["derive", "env"] }
flexi_logger = { version = "0.31.8", features = ["async", "specfile", "compress"] }
humantime-serde = "1.1.1"
log = "0.4.29"
nu-ansi-term = "0.50.3"
parking_lot = "0.12.5"
serde = "1.0.228"
serde_yaml = "0.9.34"
strum = "0.27.2"
strum_macros = "0.27.2"
trippy-core = "0.13.0"
uom = "0.37.0"
